{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 2030,
  "lineage": "2fb96fc3-f769-c70c-f564-2a1294e746fd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "wafp1-eip-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-02715eb1147b8b7d9",
            "domain": "vpc",
            "id": "eipalloc-057487ae6374abc57",
            "instance": "i-0dc64047b8aa75d6b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-032ef7107d1c45792",
            "private_dns": "ip-10-0-1-49.ec2.internal",
            "private_ip": "10.0.1.49",
            "public_dns": "ec2-18-209-138-188.compute-1.amazonaws.com",
            "public_ip": "18.209.138.188",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-eip-bastion"
            },
            "tags_all": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-eip-bastion"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.bastion",
            "aws_internet_gateway.wafp1-igw",
            "aws_key_pair.wafp1-key-pair",
            "aws_security_group.wafp1-ssh-allow",
            "aws_subnet.wafp1-pubsub-1",
            "aws_vpc.wafp1-vpc",
            "tls_private_key.wafp1-p1-tpk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "wafp1-eip-ngw-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0a388a28ed469f1ae",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-174-129-91-133.compute-1.amazonaws.com",
            "public_ip": "174.129.91.133",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Location": "us-east-1",
              "Name": "wafp1-eip-ngw-az1"
            },
            "tags_all": {
              "Location": "us-east-1",
              "Name": "wafp1-eip-ngw-az1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "wafp1-eip-ngw-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0a612fb6a774288cb",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-204-174-57.compute-1.amazonaws.com",
            "public_ip": "18.204.174.57",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-eip-ngw-az2"
            },
            "tags_all": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-eip-ngw-az2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02e136e904f3da870",
            "arn": "arn:aws:ec2:us-east-1:946470205842:instance/i-0dc64047b8aa75d6b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dc64047b8aa75d6b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "wafp1-ssh-key.pem",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-032ef7107d1c45792",
            "private_dns": "ip-10-0-1-49.ec2.internal",
            "private_ip": "10.0.1.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b0506be516d470ea",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cea8ab92ef17378e",
            "tags": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-bastion"
            },
            "tags_all": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-049775615df9eb1d9"
            ]
          },
          "dependencies": [
            "aws_key_pair.wafp1-key-pair",
            "aws_security_group.wafp1-ssh-allow",
            "aws_subnet.wafp1-pubsub-1",
            "aws_vpc.wafp1-vpc",
            "tls_private_key.wafp1-p1-tpk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02e136e904f3da870",
            "arn": "arn:aws:ec2:us-east-1:946470205842:instance/i-05dfda26b7dd02aeb",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05dfda26b7dd02aeb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "wafp1-ssh-key.pem",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-018afb28c49044c3b",
            "private_dns": "ip-10-0-2-229.ec2.internal",
            "private_ip": "10.0.2.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02daec7171386a1e8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6d1ea5f0817ab5c",
            "tags": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-webserver1",
              "Role": "webserver"
            },
            "tags_all": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-webserver1",
              "Role": "webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0530ee5b8f14a5e96"
            ]
          },
          "dependencies": [
            "aws_key_pair.wafp1-key-pair",
            "aws_security_group.wafp1-sg-webservers",
            "aws_subnet.wafp1-prisub-1",
            "aws_subnet.wafp1-pubsub-1",
            "aws_subnet.wafp1-pubsub-2",
            "aws_vpc.wafp1-vpc",
            "tls_private_key.wafp1-p1-tpk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02e136e904f3da870",
            "arn": "arn:aws:ec2:us-east-1:946470205842:instance/i-094a8e525aa3139e5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-094a8e525aa3139e5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "wafp1-ssh-key.pem",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0780dec4061f899e6",
            "private_dns": "ip-10-0-3-247.ec2.internal",
            "private_ip": "10.0.3.247",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bd27aa9bf9a2b1b7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07436e9a10c8e6096",
            "tags": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-webserver2",
              "Role": "webserver"
            },
            "tags_all": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-webserver2",
              "Role": "webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0530ee5b8f14a5e96"
            ]
          },
          "dependencies": [
            "aws_key_pair.wafp1-key-pair",
            "aws_security_group.wafp1-sg-webservers",
            "aws_subnet.wafp1-prisub-2",
            "aws_subnet.wafp1-pubsub-1",
            "aws_subnet.wafp1-pubsub-2",
            "aws_vpc.wafp1-vpc",
            "tls_private_key.wafp1-p1-tpk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wafp1-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:946470205842:internet-gateway/igw-06d96056fa7de52bd",
            "id": "igw-06d96056fa7de52bd",
            "owner_id": "946470205842",
            "tags": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-igw"
            },
            "tags_all": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-igw"
            },
            "vpc_id": "vpc-04cf6ed8181214252"
          },
          "dependencies": [
            "aws_vpc.wafp1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "wafp1-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "wafp1-alb-http-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wafp1-webapp-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:946470205842:targetgroup/wafp1-webapp-tg/8515363fdb7574ec",
            "arn_suffix": "targetgroup/wafp1-webapp-tg/8515363fdb7574ec",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:946470205842:targetgroup/wafp1-webapp-tg/8515363fdb7574ec",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "wafp1-webapp-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-webapp-tg"
            },
            "tags_all": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-webapp-tg"
            },
            "target_type": "instance",
            "vpc_id": "vpc-04cf6ed8181214252"
          },
          "dependencies": [
            "aws_vpc.wafp1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "wafp1-alb-tg-to-webserver1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:946470205842:targetgroup/wafp1-webapp-tg/8515363fdb7574ec-20211115234631947300000004",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:946470205842:targetgroup/wafp1-webapp-tg/8515363fdb7574ec",
            "target_id": "i-05dfda26b7dd02aeb"
          },
          "dependencies": [
            "aws_instance.webserver1",
            "aws_key_pair.wafp1-key-pair",
            "aws_lb_target_group.wafp1-webapp-tg",
            "aws_security_group.wafp1-sg-webservers",
            "aws_subnet.wafp1-prisub-1",
            "aws_subnet.wafp1-pubsub-1",
            "aws_subnet.wafp1-pubsub-2",
            "aws_vpc.wafp1-vpc",
            "tls_private_key.wafp1-p1-tpk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "wafp1-alb-tg-to-webserver2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:946470205842:targetgroup/wafp1-webapp-tg/8515363fdb7574ec-20211115234632022900000005",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:946470205842:targetgroup/wafp1-webapp-tg/8515363fdb7574ec",
            "target_id": "i-094a8e525aa3139e5"
          },
          "dependencies": [
            "aws_instance.webserver2",
            "aws_key_pair.wafp1-key-pair",
            "aws_lb_target_group.wafp1-webapp-tg",
            "aws_security_group.wafp1-sg-webservers",
            "aws_subnet.wafp1-prisub-2",
            "aws_subnet.wafp1-pubsub-1",
            "aws_subnet.wafp1-pubsub-2",
            "aws_vpc.wafp1-vpc",
            "tls_private_key.wafp1-p1-tpk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "wafp1-ngw-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a388a28ed469f1ae",
            "connectivity_type": "public",
            "id": "nat-004ab59234dc2074a",
            "network_interface_id": "eni-035ebbc94a3c9e05b",
            "private_ip": "10.0.1.188",
            "public_ip": "174.129.91.133",
            "subnet_id": "subnet-0cea8ab92ef17378e",
            "tags": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-ngw-az1"
            },
            "tags_all": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-ngw-az1"
            }
          },
          "dependencies": [
            "aws_eip.wafp1-eip-ngw-az1",
            "aws_subnet.wafp1-pubsub-1",
            "aws_vpc.wafp1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "wafp1-ngw-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a612fb6a774288cb",
            "connectivity_type": "public",
            "id": "nat-0abc979cc49d4e81b",
            "network_interface_id": "eni-0b3cedc04aa8d8e53",
            "private_ip": "10.0.4.110",
            "public_ip": "18.204.174.57",
            "subnet_id": "subnet-067eeebc51bd41b4d",
            "tags": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-ngw-az2"
            },
            "tags_all": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-ngw-az2"
            }
          },
          "dependencies": [
            "aws_eip.wafp1-eip-ngw-az2",
            "aws_subnet.wafp1-pubsub-2",
            "aws_vpc.wafp1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wafp1-crt-dflt-to-intrnt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:946470205842:route-table/rtb-08dd4e9f729d5e967",
            "id": "rtb-08dd4e9f729d5e967",
            "owner_id": "946470205842",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06d96056fa7de52bd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-crt-dflt-to-intrnt"
            },
            "tags_all": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-crt-dflt-to-intrnt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04cf6ed8181214252"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.wafp1-igw",
            "aws_vpc.wafp1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wafp1-crt-dflt-to-intrnt-ngw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:946470205842:route-table/rtb-032eda1c2e422062f",
            "id": "rtb-032eda1c2e422062f",
            "owner_id": "946470205842",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-004ab59234dc2074a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-crt-dflt-to-intrnt-ngw1"
            },
            "tags_all": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-crt-dflt-to-intrnt-ngw1"
            },
            "timeouts": null,
            "vpc_id": "vpc-04cf6ed8181214252"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.wafp1-eip-ngw-az1",
            "aws_nat_gateway.wafp1-ngw-az1",
            "aws_subnet.wafp1-pubsub-1",
            "aws_vpc.wafp1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wafp1-crt-dflt-to-intrnt-ngw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:946470205842:route-table/rtb-0c9f5590c328ddfb6",
            "id": "rtb-0c9f5590c328ddfb6",
            "owner_id": "946470205842",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0abc979cc49d4e81b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-crt-dflt-to-intrnt-ngw2"
            },
            "tags_all": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-crt-dflt-to-intrnt-ngw2"
            },
            "timeouts": null,
            "vpc_id": "vpc-04cf6ed8181214252"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.wafp1-eip-ngw-az2",
            "aws_nat_gateway.wafp1-ngw-az2",
            "aws_subnet.wafp1-pubsub-2",
            "aws_vpc.wafp1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wafp1-crt-dflt-to-intrnt-prisub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d778c48c691546a",
            "route_table_id": "rtb-032eda1c2e422062f",
            "subnet_id": "subnet-0a6d1ea5f0817ab5c"
          },
          "dependencies": [
            "aws_eip.wafp1-eip-ngw-az1",
            "aws_nat_gateway.wafp1-ngw-az1",
            "aws_route_table.wafp1-crt-dflt-to-intrnt-ngw1",
            "aws_subnet.wafp1-prisub-1",
            "aws_subnet.wafp1-pubsub-1",
            "aws_vpc.wafp1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wafp1-crt-dflt-to-intrnt-prisub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d28d871ff11f1239",
            "route_table_id": "rtb-0c9f5590c328ddfb6",
            "subnet_id": "subnet-07436e9a10c8e6096"
          },
          "dependencies": [
            "aws_eip.wafp1-eip-ngw-az2",
            "aws_nat_gateway.wafp1-ngw-az2",
            "aws_route_table.wafp1-crt-dflt-to-intrnt-ngw2",
            "aws_subnet.wafp1-prisub-2",
            "aws_subnet.wafp1-pubsub-2",
            "aws_vpc.wafp1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wafp1-crt-dflt-to-intrnt-pubsub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b9784e33be6c16c",
            "route_table_id": "rtb-08dd4e9f729d5e967",
            "subnet_id": "subnet-0cea8ab92ef17378e"
          },
          "dependencies": [
            "aws_internet_gateway.wafp1-igw",
            "aws_route_table.wafp1-crt-dflt-to-intrnt",
            "aws_subnet.wafp1-pubsub-1",
            "aws_vpc.wafp1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wafp1-crt-dflt-to-intrnt-pubsub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ef37e8607621533",
            "route_table_id": "rtb-08dd4e9f729d5e967",
            "subnet_id": "subnet-067eeebc51bd41b4d"
          },
          "dependencies": [
            "aws_internet_gateway.wafp1-igw",
            "aws_route_table.wafp1-crt-dflt-to-intrnt",
            "aws_subnet.wafp1-pubsub-2",
            "aws_vpc.wafp1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wafp1-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:946470205842:security-group/sg-0bbf61723c89f1b7b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bbf61723c89f1b7b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20211115234529914800000001",
            "name_prefix": "terraform-",
            "owner_id": "946470205842",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-alb-sg"
            },
            "tags_all": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04cf6ed8181214252"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wafp1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wafp1-sg-webservers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:946470205842:security-group/sg-0530ee5b8f14a5e96",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0530ee5b8f14a5e96",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.4.0/24"
                ],
                "description": "Allow HTTP from pubsub-1-and-2",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.4.0/24"
                ],
                "description": "Allow SSH from pubsub-1-and-2",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20211115234543766500000003",
            "name_prefix": "terraform-",
            "owner_id": "946470205842",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-sg-webservers"
            },
            "tags_all": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-sg-webservers"
            },
            "timeouts": null,
            "vpc_id": "vpc-04cf6ed8181214252"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.wafp1-pubsub-1",
            "aws_subnet.wafp1-pubsub-2",
            "aws_vpc.wafp1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wafp1-ssh-allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:946470205842:security-group/sg-049775615df9eb1d9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-049775615df9eb1d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20211115234529914900000002",
            "name_prefix": "terraform-",
            "owner_id": "946470205842",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-ssh-allow"
            },
            "tags_all": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-ssh-allow"
            },
            "timeouts": null,
            "vpc_id": "vpc-04cf6ed8181214252"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wafp1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wafp1-prisub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:946470205842:subnet/subnet-0a6d1ea5f0817ab5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0a6d1ea5f0817ab5c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "946470205842",
            "tags": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-prisub-1"
            },
            "tags_all": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-prisub-1"
            },
            "vpc_id": "vpc-04cf6ed8181214252"
          },
          "dependencies": [
            "aws_vpc.wafp1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wafp1-prisub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:946470205842:subnet/subnet-07436e9a10c8e6096",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-07436e9a10c8e6096",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "946470205842",
            "tags": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-prisub-2"
            },
            "tags_all": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-prisub-2"
            },
            "vpc_id": "vpc-04cf6ed8181214252"
          },
          "dependencies": [
            "aws_vpc.wafp1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wafp1-pubsub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:946470205842:subnet/subnet-0cea8ab92ef17378e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0cea8ab92ef17378e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "946470205842",
            "tags": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-pubsub-1"
            },
            "tags_all": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-pubsub-1"
            },
            "vpc_id": "vpc-04cf6ed8181214252"
          },
          "dependencies": [
            "aws_vpc.wafp1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wafp1-pubsub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:946470205842:subnet/subnet-067eeebc51bd41b4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-067eeebc51bd41b4d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "946470205842",
            "tags": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-pubsub-2"
            },
            "tags_all": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-pubsub-2"
            },
            "vpc_id": "vpc-04cf6ed8181214252"
          },
          "dependencies": [
            "aws_vpc.wafp1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wafp1-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:946470205842:vpc/vpc-04cf6ed8181214252",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05de6c88bad5bd2c7",
            "default_route_table_id": "rtb-06fecc6d3faa636c2",
            "default_security_group_id": "sg-05bc0cbf8dafa4e92",
            "dhcp_options_id": "dopt-40f8f53a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04cf6ed8181214252",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06fecc6d3faa636c2",
            "owner_id": "946470205842",
            "tags": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-vpc"
            },
            "tags_all": {
              "Environment": "wafp1-test",
              "Location": "us-east-1",
              "Name": "wafp1-vpc"
            }
          }
        }
      ]
    }
  ]
}